--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anonymousmsg",
+  "name": "speakout",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.9.0",
+    "@headlessui/react": "^2.1.0",
     "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.0.35",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
@@ -33,6 +35,7 @@
     "react-dom": "^18",
     "react-email": "^2.1.1",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.1",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
