Changed verification email service

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,7 @@
 MONGODB_URI=""
-RESEND_API_KEY=""
 NEXTAUTH_SECRET=""
 GOOGLE_API_KEY= ""
+SMTP_PORT = ""
+SMTP_USER =  ""
+SMTP_PASS = ""
+SMTP_HOST = ""
